添加注册、邮箱发送工具类

--- a/dev.properties
+++ b/dev.properties
@@ -66,20 +66,11 @@ spring.http.multipart.max-file-size=500MB
 # Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
 spring.http.multipart.max-request-size=510MB
 
-# 上传的app路径
-#app.upload.path=/home/test/apkFile
-# 上传app检测报告存储路径
-#app.report.path=/home/test/reportFile
-# 触云接口路径
-#site.safe.prefix.url=https://brige.wiair.com/Api/Index/router.html
-#TCP云路径
-#site.safe.prefix.url_hengtong=http://192.168.0.52:8080/hengtong
-# 网站安全监测接口授权码
-#site.safe.code=1e4f9eb673684328
+
 # 服务器邮箱地址
 site.safe.email=127.0.0.1
 # 发件箱账号
-admin.email=wench_li@163.com
+admin.email=404827973@qq.com
 
 # JPUSH码
 #jpush.master.secret=01a99b256c9aeb7f95d2b949
@@ -92,5 +83,3 @@ admin.email=wench_li@163.com
 # log4j
 log4j.appender.ServerDailyRollingFile.File=/home/test/com.commerce.log/test.log
 
-#平台管理员邮箱账号
-platform.admin.email=27317885@qq.com
