--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ http.connectTimeout=${http.connectTimeout}
 http.connectionRequestTimeout=${http.connectionRequestTimeout}
 http.socketTimeout=${http.socketTimeout}
 http.maxIdleTime=${http.maxIdleTime}
+
+# ” œ‰¬∑æ∂
+site.safe.email=${site.safe.email}
+# ” œ‰’À∫≈
+admin.email=${admin.email}
